--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "firebase": "^5.7.1",
     "vue": "^2.5.21",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
